# roslearn

./: jazzydockerfile
lid_control/: package.xml  setup.cfg  setup.py
lid_control/config/: lid_controllers.yaml
lid_control/launch/: lid_control.launch.py  lid_control_simple.launch.py
lid_control/lid_control/: lid_control_node.py  lid_detector.py
lid_control/resource/: lid_control
lid_control/scripts/: lid_controller.py  test_lid.py
robot_description/: CMakeLists.txt
rostut/: package.xml  setup.cfg  setup.py
rostut/config/: gz_bridge.yaml  robot.rviz
rostut/launch/: nxplaunch.launch.py  robolaunch.launch.py  tanklaunch.launch.py  tanklaunch.launch.py.bak
rostut/models/: nxp.sdf  robot.sdf  sphere.sdf  tank.sdf  tank.sdf.bak
rostut/rostut/: ball_spawner.py
rostut/scripts/: joint_state_publisher_gui.py
rostut/urdf/: nxp.urdf.xacro  robocore.urdf.xacro  robot.urdf.xacro  tank.urdf.xacro
rostut/worlds/: empty.world  houseoffice.sdf
turtlebot3_gazebo/: CMakeLists.txt
turtlebot3_gazebo/config/: mapper_params_online_async.yaml  nav2_params.yaml
turtlebot3_gazebo/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
turtlebot3_gazebo/launch/: navigation2.launch.py  online_async_launch.py  robot_state_publisher.launch.py  spawn_turtlebot3.launch.py  turtlebot3_house.launch.py  turtlebot3_navigation.launch.py  turtlebot3_world_with_lid.launch.py
turtlebot3_gazebo/log/: latest_build
turtlebot3_gazebo/maps/: create_test_map.py  map_latest.pgm  map_latest.yaml
yolov8_obb_msgs/: CMakeLists.txt  package.xml
(+39 files in other folders)
